--- a/jmercury.client/src/main/resources/org/maxsys/jmercury/client/resources/potreb.jrxml
+++ b/jmercury.client/src/main/resources/org/maxsys/jmercury/client/resources/potreb.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.1.0.final using JasperReports Library version 6.1.0  -->
-<!-- 2015-09-07T16:54:51 -->
+<!-- Created with Jaspersoft Studio version 6.1.1.final using JasperReports Library version 6.1.1  -->
+<!-- 2015-09-15T14:16:18 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="potreb" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="3dda483a-a123-4683-be04-cf306b2fe79f">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
 	<property name="com.jaspersoft.studio.unit." value="pixel"/>
@@ -79,6 +79,9 @@
 		<parameterDescription><![CDATA[]]></parameterDescription>
 	</parameter>
 	<parameter name="AplusSumAll" class="java.lang.String"/>
+	<parameter name="BeginText" class="java.lang.String"/>
+	<parameter name="EndText" class="java.lang.String"/>
+	<parameter name="StarText" class="java.lang.String"/>
 	<queryString>
 		<![CDATA[]]>
 	</queryString>
@@ -123,7 +126,7 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="DejaVu Serif" size="12"/>
 				</textElement>
-				<textFieldExpression><![CDATA["об электропотреблении за " + $P{Title_1_date} + " г."]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{Title_1_date}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement key="" x="0" y="40" width="802" height="20" uuid="05055105-2f28-40b4-be0f-29dd4f7b5848"/>
@@ -179,7 +182,7 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="DejaVu Serif"/>
 				</textElement>
-				<textFieldExpression><![CDATA["Показания счетчиков на"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Показания счетчика на"]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="300" y="20" width="90" height="45" uuid="ec64cb54-955f-4d42-b714-ba42902becb4"/>
@@ -192,7 +195,7 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="DejaVu Serif"/>
 				</textElement>
-				<textFieldExpression><![CDATA["0 час. первого\nчисла месяца"]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{BeginText}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="390" y="20" width="90" height="45" uuid="7af51c6c-9105-4e03-b73d-2c5035f40c41"/>
@@ -205,7 +208,7 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="DejaVu Serif"/>
 				</textElement>
-				<textFieldExpression><![CDATA["24 час.\nпоследнего\nчисла месяца"]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{EndText}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="480" y="0" width="80" height="65" uuid="8d622513-236e-42ae-8348-9836bc19e8d7"/>
@@ -436,7 +439,7 @@
 		</band>
 	</detail>
 	<summary>
-		<band height="121" splitType="Stretch">
+		<band height="120" splitType="Stretch">
 			<textField>
 				<reportElement key="" x="0" y="0" width="640" height="20" uuid="6c1c43a0-0c8a-40cd-a072-7032d9de6dbe"/>
 				<box>
@@ -528,6 +531,19 @@
 					<font fontName="DejaVu Serif" size="10"/>
 				</textElement>
 				<textFieldExpression><![CDATA[""]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement key="" x="345" y="100" width="457" height="20" uuid="70b7fb16-f40b-4342-9dc7-31a28ccf5b30"/>
+				<box>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement textAlignment="Right" verticalAlignment="Top">
+					<font fontName="DejaVu Serif" size="10"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{StarText}]]></textFieldExpression>
 			</textField>
 		</band>
 	</summary>
